idf_component_register(
    SRCS
        "ProfibusSlaveEmulator.c"
        "Application/VSD.c"
        "Application/ET200S.c"
        "Profibus/Protocol.c"
        "Profibus/Slave.c"
        "Profibus/Controller.c"
        "Serial/Serial.c"
        "Logging/pb_log.c"
        "Utility/list.c"
    INCLUDE_DIRS
        "."
)
